carousel height fix on mobile screens

--- a/css/carousel.css
+++ b/css/carousel.css
@@ -9,6 +9,13 @@
   max-height: 30em;
 }
 
+@media (max-width: 767.98px) {
+  #IG27-carousel:not(.compact) {
+    height: clamp(15rem, 62vw, 20rem);
+    max-height: 20rem;
+  }
+}
+
 @media (max-width: 991.98px) {
   #IG27-carousel.compact,
   #IG27-carousel.compact .carousel-inner,
